--- a/MicrophomePlugin/MainWindow.xaml
+++ b/MicrophomePlugin/MainWindow.xaml
@@ -16,14 +16,75 @@
     </Window.DataContext>
     <Window.Resources>
         <Style x:Key="TextBlockButtonStyle" TargetType="TextBlock">
-            <Setter Property="Margin" Value="10"/>
+            <Setter Property="Margin" Value="10,5"/>
+        </Style>
+        <Style x:Key="TextBlockInGrid" TargetType="TextBlock">
+            
+        </Style>
+        <Style x:Key="TextBoxInGrid" TargetType="TextBox">
+            
         </Style>
     </Window.Resources>
-    <Grid>
+    <StackPanel>
+        <TextBlock Text="Параметры для отрисовки"/>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="AUTO"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBlock Text="Радиус капсюли (мм) :"
+                       Style="{DynamicResource TextBlockInGrid}"
+                       Grid.Column="0"
+                       Grid.Row="0"/>
+            <TextBox Text="{Binding CapsuleRadius, Mode=TwoWay}"
+                     Style="{DynamicResource TextBoxInGrid}"
+                     Grid.Column="1"
+                       Grid.Row="0"/>
+            <TextBlock Text="Диаметр ручки (мм) :"
+                       Style="{DynamicResource TextBlockInGrid}"
+                       Grid.Column="0"
+                       Grid.Row="1"/>
+            <TextBox Text="{Binding HandleDiametr, Mode=TwoWay}"
+                     Style="{DynamicResource TextBoxInGrid}"
+                     Grid.Column="1"
+                       Grid.Row="1"/>
+            <TextBlock Text="Длина ручки (мм) :"
+                       Style="{DynamicResource TextBlockInGrid}"
+                       Grid.Column="0"
+                       Grid.Row="2"/>
+            <TextBox Text="{Binding HandleLenght, Mode=TwoWay}"
+                     Style="{DynamicResource TextBoxInGrid}"
+                     Grid.Column="1"
+                       Grid.Row="2"/>
+            <TextBlock Text="Длина зажима для капсюли (мм) :"
+                       Style="{DynamicResource TextBlockInGrid}"
+                       Grid.Column="0"
+                       Grid.Row="3"/>
+            <TextBox Text="{Binding ClipLenght, Mode=TwoWay}"
+                     Style="{DynamicResource TextBoxInGrid}"
+                     Grid.Column="1"
+                       Grid.Row="3"/>
+            <TextBlock Text="Общая длина (мм) :"
+                       Style="{DynamicResource TextBlockInGrid}"
+                       Grid.Column="0"
+                       Grid.Row="4"/>
+            <TextBox Text="{Binding TotalLenght, Mode=TwoWay}"
+                     Style="{DynamicResource TextBoxInGrid}"
+                     Grid.Column="1"
+                       Grid.Row="4"/>
+        </Grid>
         <StackPanel Orientation="Horizontal"
                     HorizontalAlignment="Right">
             <Button IsEnabled="{Binding IsEnableBuild}"
-                    Command="{Binding Build}">
+                    Command="{Binding Build}"
+                    HorizontalAlignment="Right">
                 <TextBlock Text="Выполнить"
                            Style="{DynamicResource TextBlockButtonStyle}"/>
             </Button>
@@ -32,5 +93,5 @@
                            Style="{DynamicResource TextBlockButtonStyle}"/>
             </Button>
         </StackPanel>
-    </Grid>
+    </StackPanel>
 </Window>
