--- a/MicrophomePlugin/MainWindow.xaml
+++ b/MicrophomePlugin/MainWindow.xaml
@@ -5,29 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MicrophonePlugin"
         mc:Ignorable="d"
-        Title="MainWindow" 
-        Height="400" 
-        Width="300"
+        Title="Плагин микрофон" 
+        Height="350" 
+        Width="400"
         WindowStartupLocation="CenterScreen"
-        WindowStyle="None"
-        ResizeMode="NoResize">
+        ResizeMode="NoResize"
+        Background="LightGray"
+        BorderBrush="Blue">
     <Window.DataContext>
         <local:MicroVM/>
     </Window.DataContext>
     <Window.Resources>
         <Style x:Key="TextBlockButtonStyle" TargetType="TextBlock">
             <Setter Property="Margin" Value="10,5"/>
+            <Setter Property="FontSize" Value="16"/>
         </Style>
         <Style x:Key="TextBlockInGrid" TargetType="TextBlock">
-            
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Margin" Value="10"/>
         </Style>
         <Style x:Key="TextBoxInGrid" TargetType="TextBox">
-            
+            <Setter Property="Background" Value="White"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
         </Style>
     </Window.Resources>
     <StackPanel>
-        <TextBlock Text="Параметры для отрисовки"/>
-        <Grid>
+        <TextBlock Text="Параметры для отрисовки"
+                   HorizontalAlignment="Center"
+                   FontSize="24"/>
+        <Grid Margin="5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="AUTO"/>
                 <ColumnDefinition Width="*"/>
@@ -81,14 +89,17 @@
                        Grid.Row="4"/>
         </Grid>
         <StackPanel Orientation="Horizontal"
-                    HorizontalAlignment="Right">
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    >
             <Button IsEnabled="{Binding IsEnableBuild}"
                     Command="{Binding Build}"
-                    HorizontalAlignment="Right">
+                    Margin="5">
                 <TextBlock Text="Выполнить"
                            Style="{DynamicResource TextBlockButtonStyle}"/>
             </Button>
-            <Button Command="{Binding MakeDefault}">
+            <Button Command="{Binding MakeDefault}"
+                    Margin="5">
                 <TextBlock Text="Очистить"
                            Style="{DynamicResource TextBlockButtonStyle}"/>
             </Button>
