--- a/MicrophomePlugin/MainWindow.xaml
+++ b/MicrophomePlugin/MainWindow.xaml
@@ -29,6 +29,13 @@
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="True">
+                    <Setter Property="Foreground" Value="Red"/>
+                    <Setter Property="ToolTip" 
+                         Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors)[0].ErrorContent}"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
     </Window.Resources>
     <StackPanel>
@@ -51,43 +58,89 @@
                        Style="{DynamicResource TextBlockInGrid}"
                        Grid.Column="0"
                        Grid.Row="0"/>
-            <TextBox Text="{Binding CapsuleRadius, Mode=TwoWay}"
-                     Style="{DynamicResource TextBoxInGrid}"
+            <TextBox Style="{DynamicResource TextBoxInGrid}"
                      Grid.Column="1"
-                       Grid.Row="0"/>
+                       Grid.Row="0">
+                <TextBox.Text>
+                    <Binding Path="CapsuleRadius" 
+                             Mode="TwoWay"
+                             NotifyOnValidationError="True">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             <TextBlock Text="Диаметр ручки (мм) :"
                        Style="{DynamicResource TextBlockInGrid}"
                        Grid.Column="0"
                        Grid.Row="1"/>
-            <TextBox Text="{Binding HandleDiametr, Mode=TwoWay}"
-                     Style="{DynamicResource TextBoxInGrid}"
+            <TextBox Style="{DynamicResource TextBoxInGrid}"
                      Grid.Column="1"
-                       Grid.Row="1"/>
+                       Grid.Row="1">
+                <TextBox.Text>
+                    <Binding Path="HandleDiametr" 
+                             Mode="TwoWay"
+                             NotifyOnValidationError="True">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             <TextBlock Text="Длина ручки (мм) :"
                        Style="{DynamicResource TextBlockInGrid}"
                        Grid.Column="0"
                        Grid.Row="2"/>
-            <TextBox Text="{Binding HandleLenght, Mode=TwoWay}"
-                     Style="{DynamicResource TextBoxInGrid}"
+            <TextBox Style="{DynamicResource TextBoxInGrid}"
                      Grid.Column="1"
-                       Grid.Row="2"/>
+                       Grid.Row="2">
+                <TextBox.Text>
+                    <Binding Path="HandleLenght" 
+                             Mode="TwoWay"
+                             NotifyOnValidationError="True">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             <TextBlock Text="Длина зажима для капсюли (мм) :"
                        Style="{DynamicResource TextBlockInGrid}"
                        Grid.Column="0"
                        Grid.Row="3"/>
-            <TextBox Text="{Binding ClipLenght, Mode=TwoWay}"
-                     Style="{DynamicResource TextBoxInGrid}"
+            <TextBox Style="{DynamicResource TextBoxInGrid}"
                      Grid.Column="1"
-                       Grid.Row="3"/>
+                       Grid.Row="3">
+                <TextBox.Text>
+                    <Binding Path="ClipLenght" 
+                             Mode="TwoWay"
+                             NotifyOnValidationError="True">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
             <TextBlock Text="Общая длина (мм) :"
                        Style="{DynamicResource TextBlockInGrid}"
                        Grid.Column="0"
                        Grid.Row="4"/>
-            <TextBox Text="{Binding TotalLenght, Mode=TwoWay}"
-                     Style="{DynamicResource TextBoxInGrid}"
+            <TextBox Style="{DynamicResource TextBoxInGrid}"
                      Grid.Column="1"
-                       Grid.Row="4"/>
+                       Grid.Row="4">
+                <TextBox.Text>
+                    <Binding Path="TotalLenght" 
+                             Mode="TwoWay"
+                             NotifyOnValidationError="True">
+                        <Binding.ValidationRules>
+                            <ExceptionValidationRule/>
+                        </Binding.ValidationRules>
+                    </Binding>
+                </TextBox.Text>
+            </TextBox>
         </Grid>
+        
         <StackPanel Orientation="Horizontal"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
