--- a/MicrophomePlugin/App.xaml
+++ b/MicrophomePlugin/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:MicrophonePlugin"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Key="CustomWindow" TargetType="{x:Type Window}">
+            <Setter Property="Height" Value="350" />
+            <Setter Property="Width" Value="400"/>
+            <Setter Property="ResizeMode" Value="NoResize"/>
+            <Setter Property="Background" Value="LightGray"/>
+            <Setter Property="BorderBrush" Value="Blue"/>
+        </Style>
     </Application.Resources>
 </Application>
