--- a/MicrophomePlugin/MainWindow.xaml
+++ b/MicrophomePlugin/MainWindow.xaml
@@ -6,12 +6,8 @@
         xmlns:local="clr-namespace:MicrophonePlugin"
         mc:Ignorable="d"
         Title="Плагин микрофон" 
-        Height="350" 
-        Width="400"
         WindowStartupLocation="CenterScreen"
-        ResizeMode="NoResize"
-        Background="LightGray"
-        BorderBrush="Blue">
+        Style="{StaticResource CustomWindow}">
     <Window.DataContext>
         <local:MicroVM/>
     </Window.DataContext>
@@ -39,6 +35,7 @@
             </Style.Triggers>
         </Style>
     </Window.Resources>
+    
     <StackPanel>
         <TextBlock Text="Параметры для отрисовки"
                    HorizontalAlignment="Center"
@@ -151,7 +148,7 @@
                     HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
                     >
-            <Button IsEnabled="{Binding IsEnableBuild}"
+            <Button x:Name="buildButton" IsEnabled="{Binding IsEnableBuild}"
                     Command="{Binding Build}"
                     Margin="5">
                 <TextBlock Text="Выполнить"
